# vcloggingserver

./: .gitignore  CMakeLists.txt  Log2ConsoleClient.cpp  Log2ConsoleClient.h  Log2ConsoleCommon.cpp  Log2ConsoleCommon.h  Log2ConsoleServer.cpp  Log2ConsoleServer.h  Log2ConsoleUdpClient.cpp  Log2ConsoleUdpClient.h  Logger.cpp  Logger.h  LoggerWrapper.h  PlatformUtils.cpp  PlatformUtils.h  README.md  SocketPlatform.cpp  SocketPlatform.h  build.bat  build.sh  example.cpp  example_wrapper.cpp  stdafx.h
cmake/: log2console-config.cmake.in
example/: CMakeLists.txt  main.cpp
